# CMV-SDK

./: README.md  The Contiguous MetaVerse Standard (CMV).docx  The Contiguous Metaverse SDK (CMV).docx
Computer Graphics Markup Language/: Computer Graphics Markup Language.docx
StruMML/: StruMML and RDS.docx
src/: CMakeLists.txt
src/sdkheader/: cms_rds_session_mgr.h  cmv_base.h  cmv_collision_detection_api.h  cmv_rds_client_mgr.h  cmv_rds_dom.h  cmv_sector.h  example.strmml
src/sdkheader/event_stack/: cmv_modifier.h  cmv_modifier_stack.h
src/sdkheader/importers/: cmv_import_tag.h
src/sdkheader/master/: cmv_avatar_context.h  cmv_sector.h  cmv_transition_interface.h
src/sdkheader/rds/: cms_rds_session_mgr.h  cmv_rds_client_mgr.h  cmv_rds_json.h  cmv_rds_server_mgr.h
src/sdkheader/strumml/: cmv_strumml_dom.h  cmv_tinyxmlbridge.h
